src/objects/Service_Code__c.object
<CustomObject>
    <description>Notes</description>
    <fields>
        <fullName>Assessment_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assessment Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Avatar_Upload_Id__c</fullName>
        <externalId>true</externalId>
        <label>Avatar Upload Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FacilityID__c</fullName>
        <label>FacilityID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Code__c</fullName>
        <label>Program Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Rollup__c</fullName>
        <label>Program Rollup</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Value__c</fullName>
        <label>Program Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Code__c</fullName>
        <label>Service Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Line__c</fullName>
        <label>Service Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Value__c</fullName>
        <label>Service Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Check__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique Check</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <formula>IF( TODAY() &gt;= Start_Date__c &amp;&amp; 
(ISBLANK(End_Date__c) || End_Date__c &gt;= Today()) ,

1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isActive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Service Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Program_Code__c</columns>
        <columns>Program_Value__c</columns>
        <columns>Service_Code__c</columns>
        <columns>Service_Value__c</columns>
        <columns>State__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SC-{000000}</displayFormat>
        <label>Service #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Code</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>